--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,62 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyFooterText_TC_16</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPopularVacationPackages_TC_13</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCity_TC_10</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyStartAgainLink_TC_15</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
-<td>regression </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -92,6 +36,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>bookingDetailswithPremiumEcomomy_Mob_TC_18</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>bookingFlightsWithmultipleCities_TC_6</td>
 <td>smoke </td>
 </tr>
@@ -102,12 +50,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
+<td>bookingSingleRoomWithThreeAdults_TC_1</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -118,7 +66,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>bookingSingleRoomOneAdultOneChild_TC_2</td>
-<td>regression </td>
+<td>testdemo </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
