--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -3,20 +3,16 @@
 <th>Class name</th>
 <th>Method name</th>
 <th>Groups</th>
-<<<<<<< HEAD
-</tr></table>
-=======
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>regression </td>
-</tr>
+<td>premiumEconomy_android_TC_18</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -38,4 +34,3 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 </table>
->>>>>>> 47e4303e7c629d9e5f679e9c1e2f36e37a385aab
