--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,38 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingFlightsWithmultipleCities_TC_6</td>
+<td>bookingSingleRoomWithThreeAdults_TC_1</td>
 <td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>removeAddedCity_TC_17</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>multipleCities_TC_21</td>
-<td>testdemo </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightAndHotelForSingleCity_TC_7</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>getWithoutAir_TC_20</td>
-<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -57,6 +27,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
