--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,32 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:39:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingFlightAndHotelForSingleCity_TC_7</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:39:43</td>   <td>-10632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingFlightsWithmultipleCities_TC_6</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:38:46</td>   <td>-67436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:39:32</td>   <td>-21170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingTwoRoomThreeAdultOneChild_TC_4</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:39:59</td>   <td>5789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.getWithoutAir_TC_20(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">getWithoutAir_TC_20</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:40:06</td>   <td>12426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">multipleCities_TC_21</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>20/04/03 16:40:08</td>   <td>14328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">removeAddedCity_TC_17</td> 
-  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:38:42</td>   <td>-71720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:39:29</td>   <td>-24239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:39:40</td>   <td>-13150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:39:51</td>   <td>-2202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:39:56</td>   <td>3014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:40:03</td>   <td>9823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/04/03 16:40:06</td>   <td>12457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="86f7b2">  <td>20/03/06 13:21:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>main@660879561</td>   <td></td> </tr>
+<tr bgcolor="fe7d71">  <td>20/03/06 13:21:37</td>   <td>-19842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
+<tr bgcolor="fe7d71">  <td>20/03/06 13:22:58</td>   <td>60304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
 </table>
