--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fe7d71">  <td>20/03/06 13:21:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
-<tr bgcolor="86f7b2">  <td>20/03/06 13:21:57</td>   <td>19842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@660879561</td>   <td></td> </tr>
-<tr bgcolor="fe7d71">  <td>20/03/06 13:22:58</td>   <td>80146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
+<tr bgcolor="eeefeb">  <td>20/04/09 13:04:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1151755506</td>   <td></td> </tr>
+<tr bgcolor="eca56e">  <td>20/04/09 13:05:00</td>   <td>51541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:16, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">verifyOtherVacationPackages_TC_12</td> 
+  <td>main@1151755506</td>   <td></td> </tr>
+<tr bgcolor="eeefeb">  <td>20/04/09 13:06:04</td>   <td>115972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1151755506</td>   <td></td> </tr>
+<tr bgcolor="eeefeb">  <td>20/04/09 13:06:04</td>   <td>116261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1151755506</td>   <td></td> </tr>
+<tr bgcolor="eca56e">  <td>20/04/09 13:06:52</td>   <td>164164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyCity_TC_10(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">verifyCity_TC_10</td> 
+  <td>main@1151755506</td>   <td></td> </tr>
+<tr bgcolor="eeefeb">  <td>20/04/09 13:07:22</td>   <td>194008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@64d7f7e0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1151755506</td>   <td></td> </tr>
 </table>
