--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse-1147776350\testng-customsuite.xml</span>
+                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse--1015416193\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)">TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmul...)">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmul...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)">
-                  </a> <!-- TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...) -->
-                  <span class="method-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <a name="TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmul...)">
+                  </a> <!-- TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmul...) -->
+                  <span class="method-name">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(java.lang.reflect.Method) throws java.lang.Exception)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse-1147776350\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse--1015416193\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.tripmasters.framework.testScript.BookingPageTestScript&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_0018_bookingDetailswithPremiumEcomomy&quot;/&gt;
+          &lt;include name=&quot;TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.tripmasters.framework.testScript.BookingPageTestScript --&gt;
     &lt;/classes&gt;
@@ -174,10 +174,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">test</span>
+              <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
+                <span class="method-in-group-name">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -199,14 +199,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_0018_bookingDetailswithPremiumEcomomy')
+data.setCell(0, 1, 'TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 115580);
+data.setCell(0, 3, 431388);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 7 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -239,6 +239,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">TC_0008_bookingFlightAndHotelwithMultipleCitiesForEuropePage</span>
                 <br/>
+                <span class="ignored-method-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
+                <br/>
                 <span class="ignored-method-name">TC_0005_FlightbookingjourneywithBuyYourOwnPackage</span>
                 <br/>
                 <span class="ignored-method-name">TC_0009_dateChanging</span>
@@ -248,8 +250,6 @@ return data;
                 <span class="ignored-method-name">TC_0003_bookingTwoRoomTwoAdult</span>
                 <br/>
                 <span class="ignored-method-name">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</span>
-                <br/>
-                <span class="ignored-method-name">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</span>
                 <br/>
                 <span class="ignored-method-name">TC_0021_FlightbookingJourneywithmultipleCities</span>
                 <br/>
@@ -271,12 +271,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)</span>
-                <span class="method-start">23788 ms</span>
+                <span class="method-name">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmul...)</span>
+                <span class="method-start">27474 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">139373 ms</span>
+                <span class="method-start">458873 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
