--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fe7d71">  <td>20/06/10 18:10:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td> 
-  <td>main@660017404</td>   <td></td> </tr>
-<tr bgcolor="eb8acf">  <td>20/06/10 18:10:20</td>   <td>-27461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
-<tr bgcolor="eb8acf">  <td>20/06/10 18:17:59</td>   <td>431400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/06/15 08:35:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">TC_0018_bookingDetailswithPremiumEcomomy</td> 
+  <td>main@988458918</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>20/06/15 08:35:16</td>   <td>-18528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@988458918</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>20/06/15 08:37:49</td>   <td>135139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@988458918</td>   <td></td> </tr>
 </table>
